	in the attribute "out.attrs", and this is used by the
	predict() method for loess to return a suitable array.

    o	dist() has a new method to calculate Minkowski distances.

    o	as.data.frame() now has a method for arrays.

    o	There are now print() and [ methods for "acf" objects.

    o	split.screen() now works for multiple devices at once.

    o   Package stats4 exports generics for AIC and BIC.

    o   The Mac OS X version now produces an R framework for easier linking
	of R into other programs.  As a result, R.app is now relocatable.

    o   Command-line Mac OS X doesn't attempt to guess whether you are
	running an X server: the default graphical device is now pdf().

    o   Added experimental support for conditionals in NAMESPACE files.

    o   rep.default(0-length-vector, length.out=n) now gives a vector
	of length n and not length 0, for compatibility with S.

    o   array() and matrix() now allow 0-length `data' arguments for
	compatibility with S.


UTILITIES

    o	R CMD check  now runs the (Rd) examples with default RNGkind
	(uniform & normal) and set.seed(1).
	example(*, setRNG = TRUE) does the same.

    o	undoc() in package `tools' has a new default of `use.values =
	NULL' which produces a warning whenever the default values of
	function arguments differ between documentation and code.
	Note that this affects "R CMD check" as well.

    o	Testing examples via massage-examples.pl (as used by R CMD
	check) now restores the search path after every help file.

    o	checkS3methods() in package 'tools' now also looks for generics
	in the loaded namespaces/packages listed in the Depends fields
	of the package's DESCRIPTION file when testing an installed
	package.


C-LEVEL FACILITIES

    o   arraySubscript and vectorSubscript take a new argument which
        is a function pointer that provides access to character
        strings (such as the names vector) rather than assuming these
        are passed in.
