@@ -21,10 +21,10 @@ rep.int(x, times)
 \arguments{
   \item{x}{a vector (of any mode including a list) or a pairlist or a
     \code{POSIXct} or \code{POSIXlt} object.}
-  \item{times}{non-negative integer.  A vector giving the number of
+  \item{times}{optional non-negative integer.  A vector giving the number of
     times to repeat each element if of length \code{length(x)}, or to
     repeat the whole vector if of length 1.}
-  \item{length.out}{integer.  (Optional.)  The desired length of the
+  \item{length.out}{optional integer. The desired length of the
     output vector.}
   \item{each}{optional integer. Each element of \code{x} is
     repeated \code{each} times.}
@@ -32,6 +32,12 @@ rep.int(x, times)
 }
 
 \details{
+  A least one of \code{times}, \code{length.out} and \code{each} must be
+  specified, and normally exactly one is.  If \code{length.out} is
+  given, \code{times} is ignored. If \code{each} is specified with
+  either of the other two, its replication is performed first, and then
+  that implied by \code{times} or \code{length.out}.
+  
   If \code{times} consists of a single integer,
   the result consists of the values in
   \code{x} repeated this many times.
@@ -42,10 +48,7 @@ rep.int(x, times)
 
   \code{length.out} may be given in place of \code{times},
   in which case \code{x} is repeated as many times as is
-  necessary to create a vector of this length.  If both
-  \code{length.out} and \code{times} are specified, \code{times}
-  determines the replication, and \code{length.out} can be used to
-  truncate the output vector (or extend it by \code{NA}s).
+  necessary to create a vector of this length.
 
   Non-integer values of \code{times} will be truncated towards zero.
   If \code{times} is a computed quantity it is prudent to add a small fuzz.
@@ -60,10 +63,10 @@ rep.int(x, times)
 }
 \note{
   If the original vector has names, these are also replicated and so
-  will almost always contain duplicates.
-
-  If \code{length.out} is used to extend the vector, the behaviour is
-  different from that of S-PLUS, which recycles the existing vector.
+  will almost always contain duplicates.  (In contrast, S strips the names.)
+%
+%  If \code{length.out} is used to extend the vector, the behaviour is
+%  different from that of S-PLUS, which recycles the existing vector.
 
   Function \code{rep.int} is a simple case handled by internal code, and
   provided as a separate function purely for S compatibility.
@@ -81,8 +84,9 @@ rep(1:4, 2)
 rep(1:4, each = 2)       # not the same.
 rep(1:4, c(2,2,2,2))     # same as second.
 rep(1:4, c(2,1,2,1))
-rep(1:4, each = 2, len = 4)  # first 4 only.
-rep(1:4, each = 2, len = 10)   # 8 integers plus two NAs
+rep(1:4, each = 2, len = 4)    # first 4 only.
+rep(1:4, each = 2, len = 10)   # 8 integers plus two recycled 1's.
+rep(1:4, each = 2, times = 3)  # length 24, 3 complete replications
 
 rep(1, 40*(1-.8)) # length 7 on most platforms
 rep(1, 40*(1-.8)+1e-7) # better
